<resources>
    <string name="app_name">SafeHomeApplication</string>
    <string name="home">Home</string>
    <string name="register">Register</string>
    <string name="login_page_here">Login Page Here</string>
    <string name="add_device_page_here">Add Device Page Here</string>
    <string name="home_button">Home Button</string>
    <string name="home_page_here">Home Page Here</string>
    <string name="log_button">Log Button</string>
    <string name="add_device_button">Add Device Button</string>
    <string name="home_button2">Home Button</string>
    <string name="log_page_here">Log Page Here</string>
    <string name="register_page_here">Register Page Here</string>
    <string name="login_page">Login Page</string>
    <string name="register_here">Register Here</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register2">Register</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="free_login">Free Login</string>
    <string name="logout2">Logout</string>
    <string name="return_to_home_page">Return to Home Page</string>
    <string name="todo">TODO</string>
    <string name="add_device">Add Device</string>
    <string name="Homelogo">TODO</string>
    <string name="logs">Logs</string>
    <string name="logout3">Logout</string>
    <string name="submit_device">Submit Device</string>
    <string name="device_name">Device Name</string>
    <string name="device_location">Device Location</string>
    <string name="config">Config</string>
</resources>