<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_register">

    <Button
        android:id="@+id/confirm_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/emailregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email2"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordregister"
        android:layout_width="214dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628"
        android:autofillHints="" />

    <EditText
        android:id="@+id/fnameRegister"
        android:layout_width="114dp"
        android:layout_height="51dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor"/>

    <EditText
        android:id="@+id/lnameregister"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor"/>

</androidx.constraintlayout.widget.ConstraintLayout>